@startuml

title __PASUR's Class Diagram__\n

  namespace config {
    class config.Configuration {
    }
  }
  

  namespace pasur {
    class pasur.Logger {
    }
  }
  

  namespace pasur {
    class pasur.Pasur {
    }
  }
  

  namespace pasur {
    class pasur.PasurGUI {
    }
  }
  

  namespace pasur {
    abstract class pasur.Player {
    }
  }
  

  namespace pasur {
    class pasur.RandomPlayer {
    }
  }
  

  namespace pasur {
    enum Rank {
    }
  }
  

  namespace pasur {
    enum Suit {
    }
  }
  

  pasur.PasurGUI .up.|> java.beans.PropertyChangeListener
  pasur.PasurGUI o-- pasur.Pasur : pasur
  pasur.RandomPlayer -up-|> pasur.Player


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
